@@ -2,7 +2,11 @@ package com.arraywork.photowise.controller;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import jakarta.annotation.Resource;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Controller;
@@ -11,12 +15,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import com.arraywork.springforce.StaticResourceHandler;
 import com.arraywork.springforce.util.HttpUtils;
 
-import jakarta.annotation.Resource;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-
 /**
  * Resource Controller
+ *
  * @author AiChen
  * @copyright ArrayWork Inc.
  * @since 2024/07/06
@@ -36,14 +37,14 @@ public class ResourceController {
     @GetMapping("/original/**")
     public void original(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String path = HttpUtils.getWildcard(request);
-        path = URLDecoder.decode(path, "UTF-8");
+        path = URLDecoder.decode(path, StandardCharsets.UTF_8);
         resourceHandler.serve(Path.of(library, path), request, response);
     }
 
     @GetMapping("/thumbnail/**")
     public void thumbnail(HttpServletRequest request, HttpServletResponse response) throws IOException {
         String path = HttpUtils.getWildcard(request) + ".jpg";
-        path = URLDecoder.decode(path, "UTF-8");
+        path = URLDecoder.decode(path, StandardCharsets.UTF_8);
         resourceHandler.serve(Path.of(thumbnails, path), request, response);
     }
 
